# system-monitor-qt

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.hpp  StatSource.cpp  StatSource.hpp  main.cpp  util.cpp  util.hpp
src/system/: Sensors.cpp  Sensors.hpp  Sensors_darwin.cpp  Sensors_linux.cpp
src/widgets/: Sensor.hpp  SensorsView.cpp  SensorsView.hpp  StatTableWidget.cpp  StatTableWidget.hpp
